--- a/styles/sass/styles.css
+++ b/styles/sass/styles.css
@@ -291,20 +291,20 @@ h2 {
 }
 
 h3 {
-  font-size: calc(3rem + 2 * ((100vw - 360px) / 1590));
+  font-size: calc(2rem + 4 * ((100vw - 360px) / 1590));
   margin-bottom: 3rem;
   margin-top: 3rem;
 }
 
 @media screen and (max-width: 360px) {
   h3 {
-    font-size: 3rem;
+    font-size: 2rem;
   }
 }
 
 @media screen and (min-width: 1950px) {
   h3 {
-    font-size: 5rem;
+    font-size: 6rem;
   }
 }
 
@@ -330,7 +330,7 @@ h4 {
 
 p {
   font-family: 'Cabin', sans-serif;
-  font-size: calc(1.8rem + 3.2 * ((100vw - 360px) / 1590));
+  font-size: calc(1.5rem + 3.5 * ((100vw - 360px) / 1590));
   margin: 0;
   text-align: left;
   line-height: 4rem;
@@ -338,7 +338,7 @@ p {
 
 @media screen and (max-width: 360px) {
   p {
-    font-size: 1.8rem;
+    font-size: 1.5rem;
   }
 }
 
@@ -806,7 +806,6 @@ h1 {
 
 .mainBody {
   background: #f6f6f6;
-  width: 100vw;
 }
 
 .mainBody .blogFlex {
@@ -1055,68 +1054,73 @@ footer {
   bottom: 0;
 }
 
-@media (max-width: 980px) {
-  .blogFlex {
-    display: block;
+@media (max-width: 1000px) {
+  .mainBody .blogFlex {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 85vw;
+  }
+  .mainBody .blogFlex .blogAside {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
         -ms-flex-direction: row;
             flex-direction: row;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    background-color: white;
+    width: 100%;
+    max-width: 100%;
+    min-width: 360px;
+    margin-right: 3rem;
+    margin-bottom: 3rem;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    -ms-flex-line-pack: stretch;
-        align-content: stretch;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    margin: 8rem 0 0 0;
-    width: 100%;
   }
-  .blogFlex .blogAside {
-    width: 100%;
-    max-width: 380px;
-    min-width: 350px;
-    margin-right: 3rem;
-  }
-  .blogFlex .blogAside .aside1 {
+  .mainBody .blogFlex .blogAside .aside1 {
     background: white;
     padding: 4rem;
-    width: 100%;
-  }
-  .blogFlex .blogAside .aside1 a {
-    color: #68B0C1;
-  }
-  .blogFlex .blogAside .aside2 {
-    background: white;
-    padding: 4rem;
-    margin-top: 3rem;
-  }
-  .blogFlex .blogAside .aside2 li {
+    width: 50%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
-  .blogFlex .blogAside .aside2 ul li {
-    list-style-type: none;
+  .mainBody .blogFlex .blogAside .aside1 .asideImg {
+    width: 450px;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
+    margin-right: 1rem;
   }
-  .blogFlex .blogAside .aside2 ul li:before {
-    content: '\00b7';
-    font-size: 40px;
-    margin: 0 0.25rem;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+  .mainBody .blogFlex .blogAside .aside1 .blogAsideImg {
+    width: 100%;
   }
-  .blogFlex .blogMain {
-    width: 55%;
+  .mainBody .blogFlex .blogAside .aside2 {
+    background: white;
+    padding: 4rem;
+    margin-top: 0rem;
+    width: 40%;
   }
-  .blogFlex .blogMain .blogBox {
+  .mainBody .blogFlex .blogMain {
+    display: block;
+    width: 85vw;
+  }
+  .mainBody .blogFlex .blogMain .blogBox {
     background: white;
     padding: 4rem;
   }
