--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -6,6 +6,7 @@
 // Page Imports
 @import './nav';
 @import './main';
+@import './asideButton';
 @import './blog';
 @import './contactForm';
 @import './contactPage';
