--- a/styles/sass/_global.scss
+++ b/styles/sass/_global.scss
@@ -36,11 +36,12 @@ h1, h2, h3, h4, h5, a {
 
 .whiteActive {
     color: white;
+    font-family: 'Oswald', sans-serif;
 }
 
 h2 {
     @include fluid-type (4rem, 5rem, 360px, 1950px);
-    margin: 3rem 0 0 0;
+    margin: 0;
 }
 
 h3 {
@@ -61,7 +62,6 @@ p {
     font-family: 'Cabin', sans-serif;
     @include fluid-type (1.5rem, 5rem, 360px, 1950px);
     margin: 0;
-    text-align: left;
     line-height: 4rem;
 }
 
