--- a/styles/sass/_nav.scss
+++ b/styles/sass/_nav.scss
@@ -1,14 +1,19 @@
+
+
 nav {
     display: flex;
+    justify-content: center;
     margin: 0 auto;
     padding-top: 1rem;
 
     ul {
         display: flex;
+        flex-direction: row;
         width: 100%;
 
         li {
             margin: 1rem;
+            display: block;
 
             a {
                 padding: 1rem 2vw;
@@ -26,6 +31,19 @@ nav {
                 margin: 0;
             }
         }
-
     }
+}
+
+[type=checkbox] {
+    display: none;
+    width: 40px;
+    height: 32px;
+    position: absolute;
+    top: -7px;
+    left: -5px;
+    opacity: 0;
+    /* hide this */
+    z-index: 3;
+    /*and place it over the hamburger*/
+    -webkit-touch-callout: none;
 }
