--- a/styles/sass/styles.css
+++ b/styles/sass/styles.css
@@ -380,6 +380,16 @@ button {
   text-transform: uppercase;
 }
 
+button:hover, button:focus {
+  -webkit-box-shadow: 5px 5px 17px 0px rgba(0, 0, 0, 0.92);
+          box-shadow: 5px 5px 17px 0px rgba(0, 0, 0, 0.92);
+}
+
+button:active {
+  -webkit-box-shadow: inset 10px 5px 17px 0px rgba(0, 0, 0, 0.92);
+          box-shadow: inset 10px 5px 17px 0px rgba(0, 0, 0, 0.92);
+}
+
 .visually-hidden:not(:focus):not(:active) {
   position: absolute !important;
   height: 1px;
@@ -390,6 +400,38 @@ button {
   clip: rect(1px, 1px, 1px, 1px);
   white-space: nowrap;
   /* added line */
+}
+
+/* Accessibility code for skip-link */
+.skip-link {
+  position: absolute;
+  left: -999px;
+  top: 1%;
+  top: 5px;
+  z-index: 999;
+  background: white;
+  font-size: 3rem;
+  border-radius: 50px;
+  width: 15rem;
+  height: 15rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  color: #171717;
+}
+
+.skip-link a {
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 2rem;
+}
+
+.skip-link:focus {
+  left: 5%;
 }
 
 .pBreak {
@@ -1080,7 +1122,7 @@ form .commentButton {
   width: 70%;
 }
 
-.contactMain form {
+form {
   margin-left: 2.5rem;
   margin-right: 2.5rem;
 }
@@ -1138,6 +1180,68 @@ footer {
   }
 }
 
+@media (max-width: 950px) {
+  .contactMain {
+    width: 100%;
+  }
+  .contactGrid {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .contactAside {
+    width: 100%;
+    margin-bottom: 3rem;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  .contactSocialIcon ul {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  form {
+    width: 100%;
+    height: 60vh;
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    -ms-grid-rows: 5rem 5rem 1fr 5rem;
+        grid-template-rows: 5rem 5rem 1fr 5rem;
+    grid-gap: 15px;
+    font-size: 2.5rem;
+    margin-bottom: 5rem;
+    margin-left: 0;
+    margin-right: 0;
+  }
+  form .idField {
+    -ms-grid-row: 1;
+    grid-area: 1 / span 2;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+  }
+  form .idField {
+    -ms-grid-row: 1;
+    grid-area: 1 / span 2;
+  }
+  form .textField {
+    -ms-grid-row: 3;
+    grid-area: 3 / span 2;
+  }
+  form .commentButton {
+    -ms-grid-row: 4;
+    grid-area: 4 / span 2;
+    width: 100%;
+  }
+  .pBreak2, .pBreak3, .pBreak3 {
+    text-align: center;
+  }
+}
+
 @media (max-width: 680px) {
   /****** NAVIGATION STYLING ******/
   input[type=checkbox] {
@@ -1149,6 +1253,9 @@ footer {
     /* Opera */
     transform: scale(2);
     padding: 10px;
+  }
+  .navbar {
+    visibility: hidden;
   }
   nav {
     position: fixed;
@@ -1184,8 +1291,8 @@ footer {
   #menuToggle {
     display: block;
     position: absolute;
-    top: 5rem;
-    right: 5rem;
+    top: 3rem;
+    right: 3rem;
     z-index: 3;
     -webkit-user-select: none;
     -moz-user-select: none;
