--- a/styles/sass/_mediaq.scss
+++ b/styles/sass/_mediaq.scss
@@ -81,11 +81,10 @@
 
         .idField {
             grid-area: 1 / span 2;
-            order: 2;
         }
 
-        .idField {
-            grid-area: 1 / span 2;
+        .idField2 {
+            grid-area: 2 / span 2;
 
         }
 
