--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -2,6 +2,14 @@
 // ◘◘◘◘ HOME PAGE ◘◘◘◘
 
 // ••• Header and Navigation 
+
+// try to convert index.html to CSS grid
+body {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(8 1fr);
+}
+
 header {
     height: 80vh;
     background-color: #B9DDE7;
