corrected margin on icons in the aside quadrant section

--- a/styles/sass/_main.scss
+++ b/styles/sass/_main.scss
@@ -104,7 +104,7 @@ h1 {
             border-radius: 50%;
             background: #B9DDE7;
             @include flexCenter;
-            margin: 3rem;
+            margin-right: 3rem;
             align-self: flex-start;
 
             i {
