--- a/styles/sass/styles.css
+++ b/styles/sass/styles.css
@@ -644,7 +644,7 @@ h1 {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 3rem;
+  margin-right: 3rem;
   -ms-flex-item-align: start;
       align-self: flex-start;
 }
@@ -1140,6 +1140,12 @@ footer {
     height: 30vh;
     background: #f6f6f65b;
   }
+  #About div {
+    width: 80%;
+  }
+  .iconTextwidth {
+    width: 100%;
+  }
   label[for="toggle"] {
     display: block;
     top: -11rem;
@@ -1227,7 +1233,8 @@ footer {
     grid-area: 4 / span 2;
     width: 100%;
   }
-  .pBreak2, .pBreak3, .pBreak3 {
+  .pBreak2, .pBreak3,
+  .pBreak3 {
     text-align: center;
   }
 }
